src/KPLinguaPreprocessing/Python/parser/grammar/KplIteratorParser.py
# Generated from KplIterator.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KplIteratorParser ( Parser ):

    grammarFileName = "KplIterator.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'='", "'+'", "'-'", "'*'", "'>'", 
                     "'>='", "'<'", "'<='", "'=='", "'!='", "'|'", "'&'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "Add", "Sub", 
                      "Mul", "Gt", "Gte", "Lt", "Lte", "Eq", "Neq", "Or", 
                      "And", "Number", "Identifier", "WS" ]

    RULE_parameters = 0
    RULE_parameter = 1
    RULE_iterators = 2
    RULE_iterator = 3
    RULE_arithmeticExpression = 4
    RULE_identifier = 5
    RULE_relationalExpression = 6
    RULE_logicalExpression = 7
    RULE_logicalOperator = 8

    ruleNames =  [ "parameters", "parameter", "iterators", "iterator", "arithmeticExpression", 
                   "identifier", "relationalExpression", "logicalExpression", 
                   "logicalOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    Add=3
    Sub=4
    Mul=5
    Gt=6
    Gte=7
    Lt=8
    Lte=9
    Eq=10
    Neq=11
    Or=12
    And=13
    Number=14
    Identifier=15
    WS=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KplIteratorParser.ParameterContext)
            else:
                return self.getTypedRuleContext(KplIteratorParser.ParameterContext,i)


        def getRuleIndex(self):
            return KplIteratorParser.RULE_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = KplIteratorParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.parameter()
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==KplIteratorParser.T__0:
                self.state = 19
                self.match(KplIteratorParser.T__0)
                self.state = 20
                self.parameter()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(KplIteratorParser.Identifier, 0)

        def Number(self):
            return self.getToken(KplIteratorParser.Number, 0)

        def getRuleIndex(self):
            return KplIteratorParser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = KplIteratorParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(KplIteratorParser.Identifier)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==KplIteratorParser.T__1:
                self.state = 27
                self.match(KplIteratorParser.T__1)
                self.state = 28
                self.match(KplIteratorParser.Number)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IteratorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.restrictions = None # RelationalExpressionContext

        def iterator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KplIteratorParser.IteratorContext)
            else:
                return self.getTypedRuleContext(KplIteratorParser.IteratorContext,i)


        def relationalExpression(self):
            return self.getTypedRuleContext(KplIteratorParser.RelationalExpressionContext,0)


        def getRuleIndex(self):
            return KplIteratorParser.RULE_iterators

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIterators" ):
                return visitor.visitIterators(self)
            else:
                return visitor.visitChildren(self)




    def iterators(self):

        localctx = KplIteratorParser.IteratorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_iterators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.iterator()
            self.state = 36
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 32
                    self.match(KplIteratorParser.T__0)
                    self.state = 33
                    self.iterator() 
                self.state = 38
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==KplIteratorParser.T__0:
                self.state = 39
                self.match(KplIteratorParser.T__0)
                self.state = 40
                localctx.restrictions = self.relationalExpression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IteratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ArithmeticExpressionContext
            self.leftInq = None # Token
            self.rightInq = None # Token
            self.right = None # ArithmeticExpressionContext
            self.increment = None # Token

        def Identifier(self):
            return self.getToken(KplIteratorParser.Identifier, 0)

        def arithmeticExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KplIteratorParser.ArithmeticExpressionContext)
            else:
                return self.getTypedRuleContext(KplIteratorParser.ArithmeticExpressionContext,i)


        def Lte(self, i:int=None):
            if i is None:
                return self.getTokens(KplIteratorParser.Lte)
            else:
                return self.getToken(KplIteratorParser.Lte, i)

        def Lt(self, i:int=None):
            if i is None:
                return self.getTokens(KplIteratorParser.Lt)
            else:
                return self.getToken(KplIteratorParser.Lt, i)

        def Number(self):
            return self.getToken(KplIteratorParser.Number, 0)

        def getRuleIndex(self):
            return KplIteratorParser.RULE_iterator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIterator" ):
                return visitor.visitIterator(self)
            else:
                return visitor.visitChildren(self)




    def iterator(self):

        localctx = KplIteratorParser.IteratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_iterator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            localctx.left = self.arithmeticExpression(0)
            self.state = 44
            localctx.leftInq = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==KplIteratorParser.Lt or _la==KplIteratorParser.Lte):
                localctx.leftInq = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 45
            self.match(KplIteratorParser.Identifier)
            self.state = 46
            localctx.rightInq = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==KplIteratorParser.Lt or _la==KplIteratorParser.Lte):
                localctx.rightInq = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 47
            localctx.right = self.arithmeticExpression(0)
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 48
                self.match(KplIteratorParser.T__0)
                self.state = 49
                localctx.increment = self.match(KplIteratorParser.Number)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return KplIteratorParser.RULE_arithmeticExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ArOpExpContext(ArithmeticExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KplIteratorParser.ArithmeticExpressionContext
            super().__init__(parser)
            self.left = None # ArithmeticExpressionContext
            self.identifierOp = None # IdentifierContext
            self.op = None # Token
            self.right = None # ArithmeticExpressionContext
            self.copyFrom(ctx)

        def Number(self):
            return self.getToken(KplIteratorParser.Number, 0)
        def identifier(self):
            return self.getTypedRuleContext(KplIteratorParser.IdentifierContext,0)

        def arithmeticExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KplIteratorParser.ArithmeticExpressionContext)
            else:
                return self.getTypedRuleContext(KplIteratorParser.ArithmeticExpressionContext,i)

        def Mul(self):
            return self.getToken(KplIteratorParser.Mul, 0)
        def Add(self):
            return self.getToken(KplIteratorParser.Add, 0)
        def Sub(self):
            return self.getToken(KplIteratorParser.Sub, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArOpExp" ):
                return visitor.visitArOpExp(self)
            else:
                return visitor.visitChildren(self)



    def arithmeticExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = KplIteratorParser.ArithmeticExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_arithmeticExpression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [KplIteratorParser.Number]:
                localctx = KplIteratorParser.ArOpExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 53
                self.match(KplIteratorParser.Number)
                pass
            elif token in [KplIteratorParser.Identifier]:
                localctx = KplIteratorParser.ArOpExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 54
                localctx.identifierOp = self.identifier()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 65
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 63
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = KplIteratorParser.ArOpExpContext(self, KplIteratorParser.ArithmeticExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpression)
                        self.state = 57
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 58
                        localctx.op = self.match(KplIteratorParser.Mul)
                        self.state = 59
                        localctx.right = self.arithmeticExpression(5)
                        pass

                    elif la_ == 2:
                        localctx = KplIteratorParser.ArOpExpContext(self, KplIteratorParser.ArithmeticExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpression)
                        self.state = 60
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 61
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==KplIteratorParser.Add or _la==KplIteratorParser.Sub):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 62
                        localctx.right = self.arithmeticExpression(4)
                        pass

             
                self.state = 67
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(KplIteratorParser.Identifier, 0)

        def getRuleIndex(self):
            return KplIteratorParser.RULE_identifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = KplIteratorParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(KplIteratorParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return KplIteratorParser.RULE_relationalExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class LoOpExpContext(RelationalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KplIteratorParser.RelationalExpressionContext
            super().__init__(parser)
            self.left = None # RelationalExpressionContext
            self.lo = None # LogicalExpressionContext
            self.op = None # Token
            self.right = None # RelationalExpressionContext
            self.copyFrom(ctx)

        def logicalExpression(self):
            return self.getTypedRuleContext(KplIteratorParser.LogicalExpressionContext,0)

        def relationalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KplIteratorParser.RelationalExpressionContext)
            else:
                return self.getTypedRuleContext(KplIteratorParser.RelationalExpressionContext,i)

        def And(self):
            return self.getToken(KplIteratorParser.And, 0)
        def Or(self):
            return self.getToken(KplIteratorParser.Or, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoOpExp" ):
                return visitor.visitLoOpExp(self)
            else:
                return visitor.visitChildren(self)



    def relationalExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = KplIteratorParser.RelationalExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_relationalExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = KplIteratorParser.LoOpExpContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 71
            localctx.lo = self.logicalExpression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 79
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = KplIteratorParser.LoOpExpContext(self, KplIteratorParser.RelationalExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_relationalExpression)
                        self.state = 73
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 74
                        localctx.op = self.match(KplIteratorParser.And)
                        self.state = 75
                        localctx.right = self.relationalExpression(4)
                        pass

                    elif la_ == 2:
                        localctx = KplIteratorParser.LoOpExpContext(self, KplIteratorParser.RelationalExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_relationalExpression)
                        self.state = 76
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 77
                        localctx.op = self.match(KplIteratorParser.Or)
                        self.state = 78
                        localctx.right = self.relationalExpression(3)
                        pass

             
                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LogicalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ArithmeticExpressionContext
            self.lo = None # LogicalOperatorContext
            self.right = None # ArithmeticExpressionContext

        def arithmeticExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KplIteratorParser.ArithmeticExpressionContext)
            else:
                return self.getTypedRuleContext(KplIteratorParser.ArithmeticExpressionContext,i)


        def logicalOperator(self):
            return self.getTypedRuleContext(KplIteratorParser.LogicalOperatorContext,0)


        def getRuleIndex(self):
            return KplIteratorParser.RULE_logicalExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalExpression" ):
                return visitor.visitLogicalExpression(self)
            else:
                return visitor.visitChildren(self)




    def logicalExpression(self):

        localctx = KplIteratorParser.LogicalExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_logicalExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            localctx.left = self.arithmeticExpression(0)
            self.state = 85
            localctx.lo = self.logicalOperator()
            self.state = 86
            localctx.right = self.arithmeticExpression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return KplIteratorParser.RULE_logicalOperator

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LogicalOperatorNameContext(LogicalOperatorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KplIteratorParser.LogicalOperatorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Gt(self):
            return self.getToken(KplIteratorParser.Gt, 0)
        def Gte(self):
            return self.getToken(KplIteratorParser.Gte, 0)
        def Lt(self):
            return self.getToken(KplIteratorParser.Lt, 0)
        def Lte(self):
            return self.getToken(KplIteratorParser.Lte, 0)
        def Eq(self):
            return self.getToken(KplIteratorParser.Eq, 0)
        def Neq(self):
            return self.getToken(KplIteratorParser.Neq, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalOperatorName" ):
                return visitor.visitLogicalOperatorName(self)
            else:
                return visitor.visitChildren(self)



    def logicalOperator(self):

        localctx = KplIteratorParser.LogicalOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_logicalOperator)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [KplIteratorParser.Gt]:
                localctx = KplIteratorParser.LogicalOperatorNameContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(KplIteratorParser.Gt)
                pass
            elif token in [KplIteratorParser.Gte]:
                localctx = KplIteratorParser.LogicalOperatorNameContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(KplIteratorParser.Gte)
                pass
            elif token in [KplIteratorParser.Lt]:
                localctx = KplIteratorParser.LogicalOperatorNameContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.match(KplIteratorParser.Lt)
                pass
            elif token in [KplIteratorParser.Lte]:
                localctx = KplIteratorParser.LogicalOperatorNameContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.match(KplIteratorParser.Lte)
                pass
            elif token in [KplIteratorParser.Eq]:
                localctx = KplIteratorParser.LogicalOperatorNameContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.match(KplIteratorParser.Eq)
                pass
            elif token in [KplIteratorParser.Neq]:
                localctx = KplIteratorParser.LogicalOperatorNameContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.match(KplIteratorParser.Neq)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.arithmeticExpression_sempred
        self._predicates[6] = self.relationalExpression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def arithmeticExpression_sempred(self, localctx:ArithmeticExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 3)
         

    def relationalExpression_sempred(self, localctx:RelationalExpressionContext, predIndex:int):
            if predIndex == 2:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 2)
         




